# fhnw-ds-ivi

./: .gitignore  README.md  pyproject.toml
functions/: dashboard.py  db.py  query.py
functions/assets/: styles.css
